assets/css/style.css
/* ----------------------------------Meta Level */

@import url('https://fonts.googleapis.com/css?family=Gafata&display=swap');
body {
    font-family: 'Gafata', sans-serif;
}

h1, h2, h3, h4 {
    font-weight: 600;
}

/* ----------------------------------The Header */

.jumbotron {
    position: relative;
    background-attachment: fixed;
    background-image: url('../images/dair-art.jpg');
    background-position: top;
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100vw;
    margin-bottom: 0px;
}

.gaeilge {
    text-decoration: none;
    color: #000000;
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.gaeilge:hover {
    text-decoration: none;
    color: #A51723;
}

.gaeilge.scrolled {
    color: #ffffff;
    margin-bottom: 1em
}

.gaeilge.scrolled:hover {
    color: #ffcace;
}

.music-container {
    text-align: center;
    padding: 0;
    margin-top: -20px;
}

.music-player {
    height: 40px;
}

.music-player-text {
    color: #A51723;
    font-weight: 600;
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.music-player-text.scrolled {
    display: none;
}

.cta {
    position: absolute;
    top: 92vh;
    text-align: center;
    background-color: white;
    color: #A51723;
    opacity: 0.8;
    height: 8vh;
}

.cta-text {
    padding-top: 10px;
    font-weight: 600;
}

.cta-text p a {
    text-decoration: none;
    color: #329e11;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.cta-text p a:hover {
    text-decoration: none;
    color: #1b631f;
}

.banner-logo-container {
    padding: 0;
}

.banner-logo {
    width: 100%;
    height: auto;
}

/* ----------------------------------Navbar */

.navbar-default {
    background: transparent;
    transition: 0.5s ease-in;
    -moz-transition: 0.5s ease-in;
    -webkit-transition: 0.5s ease-in;
    -o-transition: 0.5s ease-in;
}

.navbar-default.scrolled {
    background: rgba(0, 0, 0, 0.3);
}

.navbar-toggler {
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.navbar-toggler.scrolled {
    background-color: rgba(242, 238, 216, 0.7)
}

.nav-item {
    background-color: #D9D4BF;
    border: 1px solid #707070;
    border-radius: 6px;
    max-width: 8em;
    font-weight: 600;
}

.navbar .navbar-nav .nav-item a {
    color: #73715F;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.navbar .navbar-nav .nav-item a:hover {
    color: #A51723;
}

/* ----------------------------------The Section */

.section-container {
    display: block;
    text-align: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin: 0;
    padding: 0;
}

.section-container a {
    text-decoration: none;
    color: #A51723;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.section-container a:hover {
    text-decoration: none;
    color: #707070;
}

.section-container-row {
    margin: 0;
}

/* --------------Home and Bio Section */

.media-container {
    background-color: #73715F;
    margin: 0;
    padding: 0;
}

.media {
    display: inline-table;
    width: 100%;
}

.media-heading h3 {
    color: #D9D4BF;
    text-align: left;
    margin-top: 1em;
    margin-left: 1em;
    margin-bottom: -.6em;
}

.media-card {
    display: block;
    margin: 12% auto;
    width: 80%;
    height: auto;
}

.media-card iframe {
    border-radius: 10px;
    width: 100%;
    border: none;
}

.iframe-text {
    color: #D9D4BF;
    padding-top: 0.7em;
}

.media-card img {
    border-radius: 10px;
}

.media-card-text {
    color: #D9D4BF;
    padding-top: 0.7em;
}

.news-container {
    background-color: #D9D4BF;
    width: 100%;
    padding: 0;
}

.news {
    display: inline-table;
}

.news-heading {
    text-align: left;
    margin-top: 1.5em;
    margin-left: 1.5em;
}

.news-card {
    background-color: #F2EED8;
    border-radius: 10px;
    display: block;
    margin: 6% auto;
    width: 85%;
    height: auto;
}

.news-card h4 {
    text-align: center;
    margin: 0 .4em;
    padding-top: 1em;
}

.news-card-text {
    text-align: justify;
    padding: 1.5em;
}

/* --------------Disc Section */

.disc-container {
    background-color: #73715F;
    margin: 0;
    padding: 0;
}

.disc-heading {
    color: #F2EED8;
    text-align: center;
    padding-top: 2.2em;
}

.disc-heading h2 {
    margin: 0;
}

.disc-card {
    margin: 3em auto;
    width: 90%;
    height: auto;
    border-radius: 10px;
}

.disc-card .row {
    background-color: #D9D4BF;
    border-radius: 10px;
    margin: 0;
    padding: 0;
}

.disc-card-heading {
    color: #000000;
    text-align: left;
    padding: 0;
    margin: 0;
}

.disc-card-heading h3 {
    padding: 1em;
    padding-left: 4%;
}

.disc-album-cover {
    margin: 0;
    padding: 0 1.5em 2em 1.5em;
}

.disc-album-cover img {
    width: 90%;
    height: auto;
    border-radius: 10px;
}

.disc-card-text {
    background-color: #F2EED8;
    border-radius: 10px;
    width: 93%;
    height: auto;
    padding: 1em;
    margin: 0 0 2.3em 0;
}

.disc-card-text p {
    text-align: justify;
    padding: 0 .5em;
    margin: 0;
}

/* --------------Contact Section */

.contact-row {
    margin: 0;
    padding: 0;
}
/* ... */

